--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <title>TinDog</title>
 
   <!-- favicon links -->
-  <link rel="apple-touch-icon" sizes="180x180" href="https://finney06.github.io/tindog//apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="https://finney06.github.io/tindog//favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="https://finney06.github.io/tindog//favicon-16x16.png">
-  <link rel="manifest" href="https://finney06.github.io/tindog//site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://finney06.github.io/tindog/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://finney06.github.io/tindog/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://finney06.github.io/tindog/favicon-16x16.png">
+  <link rel="manifest" href="https://finney06.github.io/tindog/site.webmanifest">
 <link rel="icon" href="favicon.ico">
   <!-- CSS STYLESHEET -->s
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
